--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@ body {
 .controls button{
     margin: 0 4px
 }
+
+.blockSection {
+    position: relative
+}
+
+.modalWrapper{
+    width: 50vh;background-color: #fff;
+    display: flex; flex-direction: column; padding: 20px;
+    align-items: center;
+    overflow: scroll;
+}
+.modalWrapper img {width: 200px}
+.mask{
+    z-index: 99; 
+    position: fixed; top: 0; left: 0; right: 0; bottom: 0; display: flex; 
+    justify-content: center; 
+    background-color: rgba(0, 0, 0, .24);
+}
