--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,29 @@
 body {
     margin:20px;
 }
+.container {
+    position: relative;
+    width: 70vw;
+    margin: auto;
+}
 .prev1-inner {
     position: relative;
     border: solid 1px #ccc;
 }
 .prev1-inner img {
     width: 100%;
-    height: 100%
+    height: 100%;
 }
 
 .prev1-box {
     position: absolute;
-    /* width: 200px;
-    height:200px;
-    top: 0;
-    left: 225px; */
     border-radius: 50%;
     transition: .3s;
     background: rgba(255, 0, 0, 0.4);
     border: 1px solid rgba(255, 255, 255, .5)
+}
+.prev1-box.hidden {
+    visibility: hidden
 }
 
 .prev2-wrapper {
@@ -31,14 +35,16 @@ body {
 }
 
 .controls{
-    margin: 20px
+    margin: 20px 0
 }
 .controls button{
-    margin: 0 4px
+    margin: 0 8px 0 0
 }
 
 .blockSection {
-    position: relative
+    position: relative;
+    border-bottom: solid 1px #ccc;
+    padding: 20px 0;
 }
 
 .modalWrapper{
@@ -47,10 +53,48 @@ body {
     align-items: center;
     overflow: scroll;
 }
-.modalWrapper img {width: 200px}
+.modalWrapper img {width: 200px; cursor: pointer}
 .mask{
     z-index: 99; 
     position: fixed; top: 0; left: 0; right: 0; bottom: 0; display: flex; 
     justify-content: center; 
     background-color: rgba(0, 0, 0, .24);
+}
+
+.resultData {
+    border: dashed 2px #f00;
+    padding: 0 20px 20px 20px;
+    margin-top: 60px;
+    font-family: monospace;
+    color: green;
+    font-size: 1.4rem
+}
+
+button {
+    padding: 12px 22px;
+    border-radius: 22px;
+    border: solid 1px #ccc;
+    outline: none;
+    cursor: pointer
+}
+
+.mainControl {
+   display: flex;
+
+}
+
+button.btControl {
+    padding: 2px 14px;
+    border-radius: 8px;
+    border: solid 1px #ccc;
+    margin-right: 8px;
+    background-color: #fff;
+}
+button.btControl:nth-child(7) {
+    margin-right: 50px;
+}
+.btCancel {
+    color: rgb(196, 0, 0);
+    background-color: #fff;
+    border-color: rgb(196, 0, 0);
 }
